# adventofcode

./: .gitignore
C++/2015/: star8.cpp
C++/2018/: CMakeLists.txt  star1.cpp  star10.cpp  star10a.cpp  star11.cpp  star12.cpp  star13.cpp  star14.cpp  star15.cpp  star15b.cpp  star16.cpp  star17.cpp  star18.cpp  star19.cpp  star2.cpp  star20.cpp  star22.cpp  star23.cpp  star24.cpp  star3.cpp  star4.cpp  star6.cpp  star7.cpp  star8.cpp  star9.cpp
ReusableCode/: NodeClass.js
javascript/2015/: star10.js
javascript/2021/: star1.js
javascript/2022/: star1.js  star2.js
lua/2015/: star5.lua  star6.lua
lua/2021/: star1.lua
pico/: pass_input.py
pico/2015/: CMakeLists.txt
pico/2015/star11/: CMakeLists.txt  star11.c
pico/2015/star12/: CMakeLists.txt
pico/write_to_pico/: Cargo.toml
pico/write_to_pico/src/: main.rs
python/2015/: star1.py  star13.py  star14.py  star15.py  star16.py  star17.py  star18.py  star2.py  star3.py  star4.py
rust/2022/star1/src/: main.rs
