cmake_minimum_required(VERSION 3.5)

project(adventofcode LANGUAGES CXX)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

# add_subdirectory(star1)
# add_subdirectory(star2)
# add_subdirectory(star3)
# add_subdirectory(star4)
# add_subdirectory(star5)
# add_subdirectory(star6)
# add_subdirectory(star7)
# add_subdirectory(star8)
# add_subdirectory(star9)
# add_subdirectory(star10)
# add_subdirectory(star11)
# add_subdirectory(star12)
# add_subdirectory(star13)
# add_subdirectory(star14)
# add_subdirectory(star15)
# add_subdirectory(star16)
# add_subdirectory(star17)
# add_subdirectory(star18)
# add_subdirectory(star19)
# add_subdirectory(star20)
# add_subdirectory(star21)
# add_subdirectory(star22)
# add_subdirectory(star23)
# add_subdirectory(star24)
# add_subdirectory(star25)

add_executable(star1 star1.cpp)
add_executable(star2 star2.cpp)
add_executable(star3 star3.cpp)
add_executable(star4 star4.cpp)
# add_executable(star5 star5.cpp)
add_executable(star6 star6.cpp)
add_executable(star7 star7.cpp)
add_executable(star8 star8.cpp)
add_executable(star9 star9.cpp)
add_executable(star10 star10.cpp)
add_executable(star11 star11.cpp)
add_executable(star12 star12.cpp)
add_executable(star13 star13.cpp)
add_executable(star14 star14.cpp)
add_executable(star15 star15.cpp)
add_executable(star16 star16.cpp)
# add_executable(star17 star17.cpp)
add_executable(star18 star18.cpp)
add_executable(star19 star19.cpp)
add_executable(star20 star20.cpp)
add_executable(star21 star21.cpp)
add_executable(star22 star22.cpp)
add_executable(star23 star23.cpp)
add_executable(star24 star24.cpp)
# add_executable(star25 star25.cpp)